--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ org.rulez.magwas.zenta.integrationtests/generated-images/*
 bin/
 tmp/
 debian/zenta.debhelper.log
+debian/.debhelper/
+debian/files
+debian/zenta.substvars
+debian/zenta/
