--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
   <groupId>org.rulez.magwas.zenta</groupId>
   <artifactId>zenta</artifactId>
-  <version>2.4.0-SNAPSHOT</version>
+  <version>2.5-36-ge8fae01c</version><!--package version-->
   <packaging>pom</packaging>
   
   <modules>
