--- a/org.rulez.magwas.zenta.browser/pom.xml
+++ b/org.rulez.magwas.zenta.browser/pom.xml
@@ -5,11 +5,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
     <artifactId>zenta</artifactId>
-  <version>2.5-38-ge6f5670</version><!--package version-->
+  <version>2.5.40</version><!--package version-->
   </parent>
  
   <artifactId>org.rulez.magwas.zenta.browser</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
+
  
 </project>
