--- a/org.rulez.magwas.zenta.export/pom.xml
+++ b/org.rulez.magwas.zenta.export/pom.xml
@@ -4,11 +4,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
  
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
-  <version>2.5-38-ge6f5670</version><!--package version-->
+    <artifactId>zenta</artifactId>
+  <version>2.5.40</version><!--package version-->
   </parent>
  
   <artifactId>org.rulez.magwas.zenta.export</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <version>2.2.0-SNAPSHOT</version>
  
 </project>
