--- a/org.rulez.magwas.zenta.integrationtests/pom.xml
+++ b/org.rulez.magwas.zenta.integrationtests/pom.xml
@@ -5,12 +5,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
     <artifactId>zenta</artifactId>
-  <version>2.5-38-ge6f5670</version><!--package version-->
+  <version>2.5.40</version><!--package version-->
   </parent>
  
   <artifactId>org.rulez.magwas.zenta.integrationtests</artifactId>
   <packaging>eclipse-test-plugin</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
+
   
   <properties>
     <lib.dir>${project.basedir}/lib/</lib.dir>
@@ -336,7 +337,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   		<artifactId>
   			org.rulez.magwas.zenta.controller.tests
   		</artifactId>
-  		<version>1.0.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
   		<type>eclipse-plugin</type>
   		<scope>test</scope>
   	</dependency>
