--- a/org.rulez.magwas.zenta.canvas/pom.xml
+++ b/org.rulez.magwas.zenta.canvas/pom.xml
@@ -5,7 +5,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
     <artifactId>zenta</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
   </parent>
  
   <artifactId>org.rulez.magwas.zenta.canvas</artifactId>
