--- a/org.rulez.magwas.zenta.editor.build/pom.xml
+++ b/org.rulez.magwas.zenta.editor.build/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.rulez.magwas.zenta</groupId>
     <artifactId>zenta</artifactId>
-    <version>2.4.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
   </parent>
 
   <artifactId>org.rulez.magwas.zenta.editor.build</artifactId>
