--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
   <groupId>org.rulez.magwas.zenta</groupId>
   <artifactId>zenta</artifactId>
-  <version>2.4.0-SNAPSHOT</version>
+  <version>2.5.40</version><!--package version-->
   <packaging>pom</packaging>
   
   <modules>
@@ -29,7 +29,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   </modules>
  
   <properties>
-    <tycho-version>0.24.0</tycho-version>
+    <tycho-version>0.26.0</tycho-version>
     
     <jdk.version>1.8</jdk.version>
     <jdk.full.version>JavaSE-${jdk.version}</jdk.full.version>
@@ -48,58 +48,40 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     
     <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
     <maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
-    <!-- Sonar -->
-    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-    <sonar.language>java</sonar.language>  
-    <sonar.ogranization>edemo</sonar.ogranization>  
   </properties>
  
   <repositories>
    <repository>
+    <id>central maven repo</id>
+    <name>central maven repo https</name>
+    <url>https://repo.maven.apache.org/maven2</url>
+   </repository>
+   <repository>
      <id>2018-12</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/releases/2018-12</url>
+     <url>https://download.eclipse.org/releases/2018-12</url>
    </repository>
    <!--repository>
      <id>neon</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/releases/neon/</url>
+     <url>https://download.eclipse.org/releases/neon/</url>
    </repository-->
 
    <repository>
      <id>orbit</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20150821153341/repository/</url>
+     <url>https://download.eclipse.org/tools/orbit/downloads/drops/R20190226160451/repository</url>
    </repository>
    <repository>
      <id>GEF</id>
      <layout>p2</layout>
-     <url>http://download.eclipse.org/tools/gef/updates/releases/</url>
+     <url>https://download.eclipse.org/tools/gef/updates/releases/</url>
    </repository>
  </repositories>
  
   <build>
     <outputDirectory>bin</outputDirectory>
     <plugins>
-		<plugin>
-		    <groupId>org.jacoco</groupId>
-		    <artifactId>jacoco-maven-plugin</artifactId>
-		    <version>0.7.9</version>
-		    <configuration>
-		        <destFile>${sonar.jacoco.reportPath}</destFile>
-		        <append>true</append>
-		    </configuration>
-		    <executions>
-		        <execution>
-		            <id>agent</id>
-		            <goals>
-		                <goal>prepare-agent</goal>
-		            </goals>
-		        </execution>
-		    </executions>
-		</plugin>
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-packaging-plugin</artifactId>
